Made navigation bar arrows align and point right, fixed navigation bar on top of page, and made menu dropdown on hover

--- a/txdps/main.css
+++ b/txdps/main.css
@@ -136,6 +136,7 @@
       margin-right:-8px;
     }
 
-    .nav li.dropdown ul.dropdown-menu:before, .nav li.dropdown ul.dropdown-menu:after {
-        display: none;
-      }
+    li.dropdown:hover > .dropdown-menu {
+        display: block;
+    }
+    
